; ModuleID = '/home/carl/AnghaBench/freebsd/sys/powerpc/pseries/extr_plpar_pcibus.c_plpar_pcibus_probe.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/powerpc/pseries/extr_plpar_pcibus.c_plpar_pcibus_probe.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@ENXIO = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [6 x i8] c"/rtas\00", align 1
@.str.1 = private unnamed_addr constant [23 x i8] c"ibm,hypertas-functions\00", align 1
@.str.2 = private unnamed_addr constant [25 x i8] c"POWER Hypervisor PCI bus\00", align 1
@BUS_PROBE_SPECIFIC = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32)* @plpar_pcibus_probe to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @plpar_pcibus_probe(i32 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  store i32 %0, i32* %3, align 4
  %5 = load i32, i32* %3, align 4
  %6 = call i32 @ofw_bus_get_node(i32 %5)
  %7 = icmp eq i32 %6, -1
  br i1 %7, label %11, label %8

8:                                                ; preds = %1
  %9 = call i32 (...) @rtas_exists()
  %10 = icmp ne i32 %9, 0
  br i1 %10, label %13, label %11

11:                                               ; preds = %8, %1
  %12 = load i32, i32* @ENXIO, align 4
  store i32 %12, i32* %2, align 4
  br label %24

13:                                               ; preds = %8
  %14 = call i32 @OF_finddevice(i8* getelementptr inbounds ([6 x i8], [6 x i8]* @.str, i64 0, i64 0))
  store i32 %14, i32* %4, align 4
  %15 = load i32, i32* %4, align 4
  %16 = call i32 @OF_hasprop(i32 %15, i8* getelementptr inbounds ([23 x i8], [23 x i8]* @.str.1, i64 0, i64 0))
  %17 = icmp ne i32 %16, 0
  br i1 %17, label %20, label %18

18:                                               ; preds = %13
  %19 = load i32, i32* @ENXIO, align 4
  store i32 %19, i32* %2, align 4
  br label %24

20:                                               ; preds = %13
  %21 = load i32, i32* %3, align 4
  %22 = call i32 @device_set_desc(i32 %21, i8* getelementptr inbounds ([25 x i8], [25 x i8]* @.str.2, i64 0, i64 0))
  %23 = load i32, i32* @BUS_PROBE_SPECIFIC, align 4
  store i32 %23, i32* %2, align 4
  br label %24

24:                                               ; preds = %20, %18, %11
  %25 = load i32, i32* %2, align 4
  ret i32 %25
}

declare dso_local i32 @ofw_bus_get_node(i32) #1

declare dso_local i32 @rtas_exists(...) #1

declare dso_local i32 @OF_finddevice(i8*) #1

declare dso_local i32 @OF_hasprop(i32, i8*) #1

declare dso_local i32 @device_set_desc(i32, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
